--- a/.gitignore
+++ b/.gitignore
@@ -145,6 +145,7 @@ venv.bak/
 
 # mkdocs documentation
 /site
+microsoft_phi2/
 
 # mypy
 .mypy_cache/
@@ -159,6 +160,7 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
