--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-transformers 
-huggingface_hub 
-torch
-streamlit
+huggingface_hub
 python-dotenv
+torch
+torchvision
+torchaudio
+transformers
+streamlit
+asyncio
